[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
clap-verbosity-flag = "0.3.2" # Easily add a --verbose flag to CLIs using Structopt

anyhow = "1.0.52" # 错误处理
indicatif = "0.16.2" # 进度条
# 功能多的日志
log = "0.4.14" # 日志
env_logger = "0.9.0" # 日志
ctrlc = "3.2.1" # A simple easy to use wrapper around Ctrl-C signal.
signal-hook = "0.3.13" # Library for safe and correct Unix signal handling in Rust.
exitcode = "1.1.2" # System exit code constants as defined by sysexits.h 退出状态码
human-panic = "1.0.3" # Panic messages for humans