# You must change these to your own details.
[package]
name = "demo2"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["liutsing <liutsingluo@gmail.com>"]
readme = "README.md"
edition = "2018"
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
base64 = "0.12.1"
image = { version = "0.23.4", default-features = false, features = ["jpeg", "png"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console'
]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"